--- a/css/seogwipo.css
+++ b/css/seogwipo.css
@@ -55,6 +55,10 @@ a:active {
 
 }
 
+.bi-instagram {
+  color: blueviolet;
+}
+
 .images {
   position: relative;
   width:500px;
@@ -66,7 +70,13 @@ a:active {
   margin-left: -100px;
 }
 
+.box {
+  background-color: rgb(13, 97, 194);
+  color: white;
+  height: 250px;
 
+  padding: 5%;
+}
 /*.arrow_box {
 	position: relative;
 	background: #287abd;
